--- a/HTML WEEK 1/myFirstPage.html
+++ b/HTML WEEK 1/myFirstPage.html
@@ -21,8 +21,9 @@
     </section>
 
     <section>
-        <h2><img src="tải xuống.jpg" 
-            alt="Hình ảnh chú chó Shiba cười hí hết cả mắt" style="float: left;width: 305px;height: 404px;">ĐÂY LÀ HÌNH ẢNH CỦA SHIBA</h2>
+        <h2>ĐÂY LÀ HÌNH ẢNH CỦA SHIBA</h2>
+            <img src="tải xuống.jpg" 
+            alt="Hình ảnh chú chó Shiba cười hí hết cả mắt" style="width: 305px;height: 404px;">ĐÂY LÀ HÌNH ẢNH CỦA SHIBA</h2>
         </section>
     </main>
 </body>
