--- a/HTML WEEK 1/myFirstPage.html
+++ b/HTML WEEK 1/myFirstPage.html
@@ -23,7 +23,7 @@
     <section>
         <h2>ĐÂY LÀ HÌNH ẢNH CỦA SHIBA</h2>
             <img src="tải xuống.jpg" 
-            alt="Hình ảnh chú chó Shiba cười hí hết cả mắt" style="width: 305px;height: 404px;">ĐÂY LÀ HÌNH ẢNH CỦA SHIBA</h2>
+            alt="Hình ảnh chú chó Shiba cười hí hết cả mắt" alt="width: 305 height: 404">
         </section>
     </main>
 </body>
